additional network visualization save
additional network visualization save

--- a/play.ipynb
+++ b/play.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -767,111 +767,120 @@
      "output_type": "stream",
      "text": [
       "in [2.0, 30, -1.0]\n",
-      "params [Value(0.919070601336119), Value(0.6606473738750964), Value(-0.0023333685162900686), Value(-0.3297248546885154), Value(0.15767211612842735), Value(0.7653230767385126), Value(0.13353304987235304), Value(0.12249626441747519), Value(-0.7015819049074614), Value(0.9839695469735426), Value(-0.5104237869384975), Value(-0.5635344822128132), Value(0.5421206060821713), Value(-0.38011383531267295), Value(-0.4126385738082088), Value(-0.9456254616071622), Value(0.7590358481064183), Value(-0.42752021420428665), Value(-0.7801622576479286), Value(0.7231080608397127), Value(0.09097262026450426), Value(0.6144401202149881), Value(0.27972785062247896), Value(0.14718278752199532), Value(0.40989671411039263), Value(0.16819443759387154), Value(0.13140977347198834), Value(0.7233096694219943), Value(-0.4324533813270066), Value(-0.031814447433612836), Value(-0.543819106086898), Value(0.8155522327519238), Value(0.8651739447298403), Value(-0.4909268205693973), Value(0.15008388275384155), Value(-0.4226616828629315), Value(-0.9550639525078557), Value(0.7243565264300977), Value(0.34379377786228704), Value(0.45383496653548816), Value(0.4757921880126865)]\n",
+      "params [Value(-0.7474387905287347), Value(0.321492921611497), Value(0.16248578899152744), Value(0.43407599358771853), Value(0.6073867130946451), Value(0.7857502317062597), Value(0.79639353432043), Value(0.013179157601579172), Value(-0.469635636300082), Value(0.19214508221668458), Value(0.5301018776427515), Value(0.1614295732893225), Value(-0.7729687655747735), Value(0.8005707427476525), Value(0.5021657962308759), Value(0.511270148229342), Value(-0.46772677152923037), Value(0.5824253708323173), Value(0.06315055488952392), Value(-0.5202675980312181), Value(-0.6026261920790914), Value(0.07740355666330534), Value(0.01711692350893257), Value(0.2938956540196904), Value(-0.8166706201478289), Value(0.8399264251481695), Value(-0.6917796649303456), Value(0.5057121260096553), Value(0.0007232575846951583), Value(-0.8480522978973966), Value(0.4183176420638095), Value(0.22290504228182217), Value(0.7049104408283202), Value(-0.2385760023137249), Value(0.5318473861521771), Value(-0.3110692679800733), Value(-0.03786909282524786), Value(0.18875608031620206), Value(0.530440787376862), Value(-0.3886549513649997), Value(-0.705480603011708)]\n",
       ">>> Processing Layer  0\n",
       "    --- Processing Neuron  0\n",
       "Values in Input   3\n",
-      "Input  Value(2.0) Weight Value(0.919070601336119) Product Value(1.838141202672238) Previous Activation Value(0)\n",
-      "New Activation Value(1.838141202672238)\n",
-      "Input  Value(30) Weight Value(0.6606473738750964) Product Value(19.81942121625289) Previous Activation Value(1.838141202672238)\n",
-      "New Activation Value(21.657562418925128)\n",
-      "Input  Value(-1.0) Weight Value(-0.0023333685162900686) Product Value(0.0023333685162900686) Previous Activation Value(21.657562418925128)\n",
-      "New Activation Value(21.659895787441418)\n",
-      "Bias Value(-0.3297248546885154)\n",
-      "** Final Activation Value(21.330170932752903)  **\n",
+      "Input  Value(2.0) Weight Value(-0.7474387905287347) Product Value(-1.4948775810574695) Previous Activation Value(0)\n",
+      "New Activation Value(-1.4948775810574695)\n",
+      "Input  Value(30) Weight Value(0.321492921611497) Product Value(9.64478764834491) Previous Activation Value(-1.4948775810574695)\n",
+      "New Activation Value(8.14991006728744)\n",
+      "Input  Value(-1.0) Weight Value(0.16248578899152744) Product Value(-0.16248578899152744) Previous Activation Value(8.14991006728744)\n",
+      "New Activation Value(7.987424278295912)\n",
+      "Bias Value(0.43407599358771853)\n",
+      "** Final Activation Value(8.42150027188363)  **\n",
+      "** Tanh Squash  Value(0.9999999031258779)  **\n",
       "    --- Processing Neuron  1\n",
       "Values in Input   3\n",
-      "Input  Value(2.0) Weight Value(0.15767211612842735) Product Value(0.3153442322568547) Previous Activation Value(0)\n",
-      "New Activation Value(0.3153442322568547)\n",
-      "Input  Value(30) Weight Value(0.7653230767385126) Product Value(22.95969230215538) Previous Activation Value(0.3153442322568547)\n",
-      "New Activation Value(23.275036534412234)\n",
-      "Input  Value(-1.0) Weight Value(0.13353304987235304) Product Value(-0.13353304987235304) Previous Activation Value(23.275036534412234)\n",
-      "New Activation Value(23.141503484539882)\n",
-      "Bias Value(0.12249626441747519)\n",
-      "** Final Activation Value(23.263999748957357)  **\n",
+      "Input  Value(2.0) Weight Value(0.6073867130946451) Product Value(1.2147734261892902) Previous Activation Value(0)\n",
+      "New Activation Value(1.2147734261892902)\n",
+      "Input  Value(30) Weight Value(0.7857502317062597) Product Value(23.57250695118779) Previous Activation Value(1.2147734261892902)\n",
+      "New Activation Value(24.78728037737708)\n",
+      "Input  Value(-1.0) Weight Value(0.79639353432043) Product Value(-0.79639353432043) Previous Activation Value(24.78728037737708)\n",
+      "New Activation Value(23.99088684305665)\n",
+      "Bias Value(0.013179157601579172)\n",
+      "** Final Activation Value(24.00406600065823)  **\n",
+      "** Tanh Squash  Value(1.0)  **\n",
       "    --- Processing Neuron  2\n",
       "Values in Input   3\n",
-      "Input  Value(2.0) Weight Value(-0.7015819049074614) Product Value(-1.4031638098149228) Previous Activation Value(0)\n",
-      "New Activation Value(-1.4031638098149228)\n",
-      "Input  Value(30) Weight Value(0.9839695469735426) Product Value(29.519086409206277) Previous Activation Value(-1.4031638098149228)\n",
-      "New Activation Value(28.115922599391354)\n",
-      "Input  Value(-1.0) Weight Value(-0.5104237869384975) Product Value(0.5104237869384975) Previous Activation Value(28.115922599391354)\n",
-      "New Activation Value(28.62634638632985)\n",
-      "Bias Value(-0.5635344822128132)\n",
-      "** Final Activation Value(28.062811904117037)  **\n",
+      "Input  Value(2.0) Weight Value(-0.469635636300082) Product Value(-0.939271272600164) Previous Activation Value(0)\n",
+      "New Activation Value(-0.939271272600164)\n",
+      "Input  Value(30) Weight Value(0.19214508221668458) Product Value(5.7643524665005375) Previous Activation Value(-0.939271272600164)\n",
+      "New Activation Value(4.825081193900374)\n",
+      "Input  Value(-1.0) Weight Value(0.5301018776427515) Product Value(-0.5301018776427515) Previous Activation Value(4.825081193900374)\n",
+      "New Activation Value(4.294979316257622)\n",
+      "Bias Value(0.1614295732893225)\n",
+      "** Final Activation Value(4.456408889546945)  **\n",
+      "** Tanh Squash  Value(0.9997307324980254)  **\n",
       "    --- Processing Neuron  3\n",
       "Values in Input   3\n",
-      "Input  Value(2.0) Weight Value(0.5421206060821713) Product Value(1.0842412121643425) Previous Activation Value(0)\n",
-      "New Activation Value(1.0842412121643425)\n",
-      "Input  Value(30) Weight Value(-0.38011383531267295) Product Value(-11.403415059380189) Previous Activation Value(1.0842412121643425)\n",
-      "New Activation Value(-10.319173847215847)\n",
-      "Input  Value(-1.0) Weight Value(-0.4126385738082088) Product Value(0.4126385738082088) Previous Activation Value(-10.319173847215847)\n",
-      "New Activation Value(-9.906535273407638)\n",
-      "Bias Value(-0.9456254616071622)\n",
-      "** Final Activation Value(-10.8521607350148)  **\n",
+      "Input  Value(2.0) Weight Value(-0.7729687655747735) Product Value(-1.545937531149547) Previous Activation Value(0)\n",
+      "New Activation Value(-1.545937531149547)\n",
+      "Input  Value(30) Weight Value(0.8005707427476525) Product Value(24.017122282429575) Previous Activation Value(-1.545937531149547)\n",
+      "New Activation Value(22.471184751280028)\n",
+      "Input  Value(-1.0) Weight Value(0.5021657962308759) Product Value(-0.5021657962308759) Previous Activation Value(22.471184751280028)\n",
+      "New Activation Value(21.96901895504915)\n",
+      "Bias Value(0.511270148229342)\n",
+      "** Final Activation Value(22.480289103278494)  **\n",
+      "** Tanh Squash  Value(1.0)  **\n",
       ">>> Processing Layer  1\n",
       "    --- Processing Neuron  0\n",
       "Values in Input   4\n",
-      "Input  Value(1.0) Weight Value(0.7590358481064183) Product Value(0.7590358481064183) Previous Activation Value(0)\n",
-      "New Activation Value(0.7590358481064183)\n",
-      "Input  Value(1.0) Weight Value(-0.42752021420428665) Product Value(-0.42752021420428665) Previous Activation Value(0.7590358481064183)\n",
-      "New Activation Value(0.3315156339021317)\n",
-      "Input  Value(1.0) Weight Value(-0.7801622576479286) Product Value(-0.7801622576479286) Previous Activation Value(0.3315156339021317)\n",
-      "New Activation Value(-0.4486466237457969)\n",
-      "Input  Value(-0.9999999992501698) Weight Value(0.7231080608397127) Product Value(-0.7231080602975044) Previous Activation Value(-0.4486466237457969)\n",
-      "New Activation Value(-1.1717546840433013)\n",
-      "Bias Value(0.09097262026450426)\n",
-      "** Final Activation Value(-1.080782063778797)  **\n",
+      "Input  Value(0.9999999031258779) Weight Value(-0.46772677152923037) Product Value(-0.46772672621861) Previous Activation Value(0)\n",
+      "New Activation Value(-0.46772672621861)\n",
+      "Input  Value(1.0) Weight Value(0.5824253708323173) Product Value(0.5824253708323173) Previous Activation Value(-0.46772672621861)\n",
+      "New Activation Value(0.11469864461370727)\n",
+      "Input  Value(0.9997307324980254) Weight Value(0.06315055488952392) Product Value(0.06313355049736051) Previous Activation Value(0.11469864461370727)\n",
+      "New Activation Value(0.1778321951110678)\n",
+      "Input  Value(1.0) Weight Value(-0.5202675980312181) Product Value(-0.5202675980312181) Previous Activation Value(0.1778321951110678)\n",
+      "New Activation Value(-0.34243540292015034)\n",
+      "Bias Value(-0.6026261920790914)\n",
+      "** Final Activation Value(-0.9450615949992418)  **\n",
+      "** Tanh Squash  Value(-0.7375391519360825)  **\n",
       "    --- Processing Neuron  1\n",
       "Values in Input   4\n",
-      "Input  Value(1.0) Weight Value(0.6144401202149881) Product Value(0.6144401202149881) Previous Activation Value(0)\n",
-      "New Activation Value(0.6144401202149881)\n",
-      "Input  Value(1.0) Weight Value(0.27972785062247896) Product Value(0.27972785062247896) Previous Activation Value(0.6144401202149881)\n",
-      "New Activation Value(0.894167970837467)\n",
-      "Input  Value(1.0) Weight Value(0.14718278752199532) Product Value(0.14718278752199532) Previous Activation Value(0.894167970837467)\n",
-      "New Activation Value(1.0413507583594623)\n",
-      "Input  Value(-0.9999999992501698) Weight Value(0.40989671411039263) Product Value(-0.4098967138030397) Previous Activation Value(1.0413507583594623)\n",
-      "New Activation Value(0.6314540445564226)\n",
-      "Bias Value(0.16819443759387154)\n",
-      "** Final Activation Value(0.7996484821502942)  **\n",
+      "Input  Value(0.9999999031258779) Weight Value(0.07740355666330534) Product Value(0.07740354916490375) Previous Activation Value(0)\n",
+      "New Activation Value(0.07740354916490375)\n",
+      "Input  Value(1.0) Weight Value(0.01711692350893257) Product Value(0.01711692350893257) Previous Activation Value(0.07740354916490375)\n",
+      "New Activation Value(0.09452047267383631)\n",
+      "Input  Value(0.9997307324980254) Weight Value(0.2938956540196904) Product Value(0.29381651747109133) Previous Activation Value(0.09452047267383631)\n",
+      "New Activation Value(0.3883369901449276)\n",
+      "Input  Value(1.0) Weight Value(-0.8166706201478289) Product Value(-0.8166706201478289) Previous Activation Value(0.3883369901449276)\n",
+      "New Activation Value(-0.42833363000290126)\n",
+      "Bias Value(0.8399264251481695)\n",
+      "** Final Activation Value(0.41159279514526825)  **\n",
+      "** Tanh Squash  Value(0.3898242675684252)  **\n",
       "    --- Processing Neuron  2\n",
       "Values in Input   4\n",
-      "Input  Value(1.0) Weight Value(0.13140977347198834) Product Value(0.13140977347198834) Previous Activation Value(0)\n",
-      "New Activation Value(0.13140977347198834)\n",
-      "Input  Value(1.0) Weight Value(0.7233096694219943) Product Value(0.7233096694219943) Previous Activation Value(0.13140977347198834)\n",
-      "New Activation Value(0.8547194428939826)\n",
-      "Input  Value(1.0) Weight Value(-0.4324533813270066) Product Value(-0.4324533813270066) Previous Activation Value(0.8547194428939826)\n",
-      "New Activation Value(0.422266061566976)\n",
-      "Input  Value(-0.9999999992501698) Weight Value(-0.031814447433612836) Product Value(0.031814447409757404) Previous Activation Value(0.422266061566976)\n",
-      "New Activation Value(0.4540805089767334)\n",
-      "Bias Value(-0.543819106086898)\n",
-      "** Final Activation Value(-0.08973859711016458)  **\n",
+      "Input  Value(0.9999999031258779) Weight Value(-0.6917796649303456) Product Value(-0.6917795979147979) Previous Activation Value(0)\n",
+      "New Activation Value(-0.6917795979147979)\n",
+      "Input  Value(1.0) Weight Value(0.5057121260096553) Product Value(0.5057121260096553) Previous Activation Value(-0.6917795979147979)\n",
+      "New Activation Value(-0.1860674719051426)\n",
+      "Input  Value(0.9997307324980254) Weight Value(0.0007232575846951583) Product Value(0.0007230628349320432) Previous Activation Value(-0.1860674719051426)\n",
+      "New Activation Value(-0.18534440907021058)\n",
+      "Input  Value(1.0) Weight Value(-0.8480522978973966) Product Value(-0.8480522978973966) Previous Activation Value(-0.18534440907021058)\n",
+      "New Activation Value(-1.033396706967607)\n",
+      "Bias Value(0.4183176420638095)\n",
+      "** Final Activation Value(-0.6150790649037976)  **\n",
+      "** Tanh Squash  Value(-0.5476924989716406)  **\n",
       "    --- Processing Neuron  3\n",
       "Values in Input   4\n",
-      "Input  Value(1.0) Weight Value(0.8155522327519238) Product Value(0.8155522327519238) Previous Activation Value(0)\n",
-      "New Activation Value(0.8155522327519238)\n",
-      "Input  Value(1.0) Weight Value(0.8651739447298403) Product Value(0.8651739447298403) Previous Activation Value(0.8155522327519238)\n",
-      "New Activation Value(1.6807261774817641)\n",
-      "Input  Value(1.0) Weight Value(-0.4909268205693973) Product Value(-0.4909268205693973) Previous Activation Value(1.6807261774817641)\n",
-      "New Activation Value(1.1897993569123668)\n",
-      "Input  Value(-0.9999999992501698) Weight Value(0.15008388275384155) Product Value(-0.15008388264130412) Previous Activation Value(1.1897993569123668)\n",
-      "New Activation Value(1.0397154742710626)\n",
-      "Bias Value(-0.4226616828629315)\n",
-      "** Final Activation Value(0.6170537914081311)  **\n",
+      "Input  Value(0.9999999031258779) Weight Value(0.22290504228182217) Product Value(0.2229050206880919) Previous Activation Value(0)\n",
+      "New Activation Value(0.2229050206880919)\n",
+      "Input  Value(1.0) Weight Value(0.7049104408283202) Product Value(0.7049104408283202) Previous Activation Value(0.2229050206880919)\n",
+      "New Activation Value(0.9278154615164121)\n",
+      "Input  Value(0.9997307324980254) Weight Value(-0.2385760023137249) Product Value(-0.23851176154955078) Previous Activation Value(0.9278154615164121)\n",
+      "New Activation Value(0.6893036999668614)\n",
+      "Input  Value(1.0) Weight Value(0.5318473861521771) Product Value(0.5318473861521771) Previous Activation Value(0.6893036999668614)\n",
+      "New Activation Value(1.2211510861190384)\n",
+      "Bias Value(-0.3110692679800733)\n",
+      "** Final Activation Value(0.9100818181389652)  **\n",
+      "** Tanh Squash  Value(0.7211715218705337)  **\n",
       ">>> Processing Layer  2\n",
       "    --- Processing Neuron  0\n",
       "Values in Input   4\n",
-      "Input  Value(-0.7934889340010819) Weight Value(-0.9550639525078557) Product Value(0.7578326775783183) Previous Activation Value(0)\n",
-      "New Activation Value(0.7578326775783183)\n",
-      "Input  Value(0.6638402065234549) Weight Value(0.7243565264300977) Product Value(0.4808569861019685) Previous Activation Value(0.7578326775783183)\n",
-      "New Activation Value(1.2386896636802867)\n",
-      "Input  Value(-0.08949848176112499) Weight Value(0.34379377786228704) Product Value(-0.030769021157596152) Previous Activation Value(1.2386896636802867)\n",
-      "New Activation Value(1.2079206425226905)\n",
-      "Input  Value(0.5490733772716004) Weight Value(0.45383496653548816) Product Value(0.24918869779958425) Previous Activation Value(1.2079206425226905)\n",
-      "New Activation Value(1.4571093403222748)\n",
-      "Bias Value(0.4757921880126865)\n",
-      "** Final Activation Value(1.9329015283349613)  **\n",
-      "out [Value(0.9589672855655215)]\n"
+      "Input  Value(-0.7375391519360825) Weight Value(-0.03786909282524786) Product Value(0.027929938606922097) Previous Activation Value(0)\n",
+      "New Activation Value(0.027929938606922097)\n",
+      "Input  Value(0.3898242675684252) Weight Value(0.18875608031620206) Product Value(0.07358170075835031) Previous Activation Value(0.027929938606922097)\n",
+      "New Activation Value(0.10151163936527241)\n",
+      "Input  Value(-0.5476924989716406) Weight Value(0.530440787376862) Product Value(-0.2905184403949182) Previous Activation Value(0.10151163936527241)\n",
+      "New Activation Value(-0.1890068010296458)\n",
+      "Input  Value(0.7211715218705337) Weight Value(-0.3886549513649997) Product Value(-0.2802868827584151) Previous Activation Value(-0.1890068010296458)\n",
+      "New Activation Value(-0.4692936837880609)\n",
+      "Bias Value(-0.705480603011708)\n",
+      "** Final Activation Value(-1.174774286799769)  **\n",
+      "** Tanh Squash  Value(-0.8257966781936382)  **\n",
+      "out [Value(-0.8257966781936382)]\n"
      ]
     }
    ],
